# cow-solver-py

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CLAUDE.md  PLAN.md  README.md  SESSIONS.md  pyproject.toml  setup_cython.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
benchmarks/: __init__.py  comparison.py  harness.py  metrics.py  report.py  rust_runner.py
docs/: README.md  benchmark-slice4.2-plan.md  slice-4.3-evaluation-results.md  slice-4.3-ring-analysis.md
docs/design/: architecture-refactoring-plan.md  balancer-curve-plan.md  constraint-enforcement-fix-plan.md  constraint-gaps-fix-plan.md  limit-orders.md  phase4-slice4.1-problem-formulation.md  rust-parity-validation.md  safe-math-standardization-plan.md  settlement-optimization-formulation.md  slice-4.4-ring-trade-detection.md  uniswap-v3-plan.md
docs/evaluations/: cow-potential-analysis.md  slice-4.2-benchmark-plan.md  slice-4.3-evaluation-results.md  slice-4.4-ring-trade-benchmark.md
docs/research/: README.md  flash-loans.md
docs/reviews/: 2026-01-23-architecture.md  2026-02-06-amm-math.md  2026-02-06-api-models-infrastructure.md  2026-02-06-architecture.md  2026-02-06-core-solver-logic.md  2026-02-06-summary.md  2026-02-06-test-coverage.md
docs/sessions/: README.md  phase-1-summary.md  phase-2-summary.md  phase-3.1-summary.md  pre-phase4-architecture.md  session-01.md  session-05.md  session-06.md  session-08.md  session-09.md  session-10.md  session-12.md  session-13.md  session-16.md  session-18.md  session-19.md  session-20.md  session-22.md  session-25.md  session-26.md  session-27.md  session-28.md  session-30.md  session-32.md  session-34.md  session-47-decimal-fix.md  (+4 more)
scripts/: __init__.py  analyze_auction_structure.py  analyze_crossing_gap.py  analyze_graph.py  analyze_matching_gap.py  analyze_ring_potential.py  benchmark_strategies.py  check_safe_math.py  collect_auctions.py  compare_strategies.py  compute_ebbo_prices.py  evaluate_hybrid_strategy.py  extract_rust_fixtures.py  generate_cow_fixtures.py  profile_solver.py  prototype_lp_solver.py  prototype_price_enumeration.py  quick_timing.py  run_benchmarks.py  validate_rust_fixtures.py
solver/: __init__.py  constants.py  ebbo.py  safe_int.py  safe_int_cy.pyx  solver.py
tests/: __init__.py  conftest.py
(+269 files in other folders)
